welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:27: error: ';' expected but ',' found.
               for (i <- 1 to 3) {avance()},
                                           ^